Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,6 @@ steps:
 - task: SonarQubeAnalyze@5
   inputs:
     jdkversion: 'JAVA_HOME_11_X64'
-- task: SonarQubeAnalyze@5
+- task: SonarQubePublish@5
   inputs:
-    jdkversion: 'JAVA_HOME_11_X64'
+    pollingTimeoutSec: '300'
